@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 fc8884bc989ed3f58334c195af51079a ChangeLog 841
+MD5 d40f7787bee6d4c76f97ff3e16889851 ChangeLog 948
 MD5 87bba6f0e4549dfb3582a33300e6ebe6 files/digest-sendpage-0.9.14 67
 MD5 b5e5bd080e7466a1a6172920bc97be53 metadata.xml 659
-MD5 c1a46b6d8540cdeaf4570b9e2718bcbf sendpage-0.9.14.ebuild 787
+MD5 a3b97191c3a8bd951d47f0026843e7ec sendpage-0.9.14.ebuild 790
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFDtSIBtG5z4I8BtQoRAm1HAJ0fUclSGmuLJCUmahKfg66tE97RsQCfV7rL
-VG1aY01SMNjDRpHD1D4hnZs=
-=71tU
+iD8DBQFD8J2KtG5z4I8BtQoRAnrYAJ0VCR2sUVZRvkqT51paGD9oHOSW3gCeI6/h
+vBfVUZrPa9Up7F9cU3SKvWE=
+=jcva
 -----END PGP SIGNATURE-----
